--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -25,6 +25,7 @@ $rating-color:#ECC132;
 $brand1-text-special: #98A2B3;
 $border-color:#EAECF0;
 $brand-bg-course: rgba(103, 156, 197, 0.16);
+$contact-bg: rgba(205, 229, 248, 0.24);
 //===================== Brand 1 variables  end===================== //
 
 
@@ -87,7 +88,7 @@ $footer-text-special: #bfbfbf;
 
 
 
-
+$form-focus:#366CD5;
 $white-color:#fff;
 $black-color:#000;
 
