--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -297,6 +297,7 @@
   transition: $transition;
   text-transform: capitalize;
   line-height: 1;
+  background: transparent;
 
   // @include breakpoint(xl) {
   //   padding: 1.25rem 1.85rem;
