--- a/assets/sass/components/_course.scss
+++ b/assets/sass/components/_course.scss
@@ -320,7 +320,7 @@
               //   @extend %me-10;
               // }
 
-              a {
+              button {
                 color: $text-color-light;
                 border-radius: 10px;
 
@@ -513,7 +513,7 @@
             //   @extend %me-10;
             // }
 
-            a {
+            button {
               color: $text-color-light;
 
               &:hover,
