--- a/assets/sass/components/_coursedetails.scss
+++ b/assets/sass/components/_coursedetails.scss
@@ -16,20 +16,46 @@
             }
 
             &__focus {
-                .star {
-                    @extend %text-semibold;
-                    color: $rating-color;
-
-                    svg {
-                        // @include font-size(14px);
-                        color: $rating-color;
-
-                    }
+                @extend %d-flex, %align-i-center;
+                gap: 2px;
+                @include breakpoint (sm){
+                    gap: 5px;
                 }
-
-                .count {
+                &-rating{
+                    @extend %text-bold;
+                    color: $rating-color;
+                }
+                &-star{
+                    ul{
+                        @extend %d-flex, %align-i-center;
+                        li{
+                            @include font-size(12px);
+                            color: $rating-color;
+                        }
+                    } 
+                }
+                &-count{
+                    @include font-size(18px);
                     color: $brand1-text-1;
                 }
+                &-students{
+                    @include font-size(18px);
+                    color: $title-color;
+                }
+                // .star {
+                //     @extend %text-semibold;
+                //     color: $rating-color;
+
+                //     svg {
+                //         // @include font-size(14px);
+                //         color: $rating-color;
+
+                //     }
+                // }
+
+                // .count {
+                //     color: $brand1-text-1;
+                // }
             }
 
             &__info {
@@ -71,7 +97,7 @@
                             }
                         }
 
-                        a {
+                        button {
                             @extend %of-hidden,
                             %mb-20;
                             color: $text-color-light;
@@ -79,6 +105,7 @@
                             padding-top: 0;
                             padding-bottom: 10px;
                             z-index: +1;
+                            background: transparent;
                             border-bottom: 3px solid transparent;
 
 
