--- a/assets/sass/components/_preloader.scss
+++ b/assets/sass/components/_preloader.scss
@@ -1,15 +1,186 @@
-.preloader {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: grid;
-    place-items: center;
-    background-color: $brand-color-1;
-    z-index: 99999;
+// .preloader {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     display: grid;
+//     place-items: center;
+//     background-color: $brand-color-1;
+//     z-index: 99999;
 
-    img {
-        @include animation(santa-ride 2s cubic-bezier(0.41, 0.15, 0.64, 0.86) infinite alternate);
+//     img {
+//         @include animation(santa-ride 2s cubic-bezier(0.41, 0.15, 0.64, 0.86) infinite alternate);
+//     }
+// }
+
+$preloader-bg-color: #ffffff;
+$preloader-spinner-border: 10px;
+$preloader-spinner-color: green;
+$preloader-char-color: rgba(0, 0, 0, 0.2);
+$preloader-char-delay: 0.2s;
+
+/* Preloader */
+.container-preloader {
+    @extend %d-flex, %text-center, %justify-center, %p-fixed, %align-i-center;
+    height: 100%;
+
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 900;
+
+    .animation-preloader {
+        @extend %p-abs;
+        z-index: 100;
+
+        .spinner {
+            animation: spinner 1s infinite linear;
+            border-radius: 50%;
+            border: 6px solid rgba(0, 0, 0, 0.2);
+            height: 4em;
+            margin: 0 auto 2em auto;
+            width: 4em;
+
+            @include breakpoint(sm) {
+                height: 5em;
+                margin: 0 auto 2.5em auto;
+                width: 5em;
+            }
+
+            @include breakpoint(sm) {
+                height: 5em;
+                margin: 0 auto 2.5em auto;
+                width: 5em;
+            }
+
+            // @include breakpoint(md) {
+            //     height: 5em;
+            //     margin: 0 auto 2.5em auto;
+            //     width: 5em;
+            // }
+            @include breakpoint(lg) {
+                margin: 0 auto 2.5em auto;
+                border: 8px solid rgba(0, 0, 0, 0.2);
+            }
+
+            @include breakpoint(xl) {
+                height: 6em;
+                margin: 0 auto 3em auto;
+                width: 6em;
+            }
+
+            &--style1 {
+                border-top-color: $brand-color-4;
+            }
+        }
+
+        .txt-loading {
+            @extend %text-bold, %text-center;
+            @include font-size(56px);
+            text-align: center;
+            user-select: none;
+
+            .characters:before {
+                @extend %p-abs;
+                animation: characters 4s infinite;
+                color: $secondary-color-1;
+                content: attr(preloader-text);
+                left: 0;
+                opacity: 0;
+                // position: absolute;
+                top: 0;
+                transform: rotateY(-90deg);
+            }
+
+            .characters {
+                @extend %p-rel;
+                color: rgba(0, 0, 0, 0.2);
+                // position: relative;
+            }
+
+            .characters:nth-child(2):before {
+                animation-delay: 0.2s;
+            }
+
+            .characters:nth-child(3):before {
+                animation-delay: 0.4s;
+            }
+
+            .characters:nth-child(4):before {
+                animation-delay: 0.6s;
+            }
+
+            .characters:nth-child(5):before {
+                animation-delay: 0.8s;
+            }
+
+            .characters:nth-child(6):before {
+                animation-delay: 1s;
+            }
+
+            .characters:nth-child(7):before {
+                animation-delay: 1.2s;
+            }
+        }
+    }
+
+    .loader-section {
+        @extend %p-fixed;
+        background-color: $brand-color-1;
+        height: 100%;
+        // position: fixed;
+        top: 0;
+        width: calc(50% + 1px);
+
+        &.section-left {
+            left: 0;
+        }
+
+        &.section-right {
+            right: 0;
+        }
     }
 }
+
+/* Fade effect on loading animation */
+.loaded .animation-preloader {
+    opacity: 0;
+    transition: 0.3s ease-out;
+}
+
+/* Curtain effect */
+.loaded .loader-section.section-left {
+    transform: translateX(-101%);
+    transition: 0.7s 0.3s all cubic-bezier(0.1, 0.1, 0.1, 1.000);
+}
+
+.loaded .loader-section.section-right {
+    transform: translateX(101%);
+    transition: 0.7s 0.3s all cubic-bezier(0.1, 0.1, 0.1, 1.000);
+}
+
+/* Animation of the preloader */
+@keyframes spinner {
+    to {
+        transform: rotateZ(360deg);
+    }
+}
+
+/* Animation of letters loading from the preloader */
+@keyframes characters {
+
+    0%,
+    75%,
+    100% {
+        opacity: 0;
+        transform: rotateY(-90deg);
+    }
+
+    25%,
+    50% {
+        opacity: 1;
+        transform: rotateY(0deg);
+    }
+}
+
