--- a/assets/sass/layout/_banner.scss
+++ b/assets/sass/layout/_banner.scss
@@ -497,8 +497,8 @@
                         }
 
                         @include breakpoint(xxl) {
-                            top: 28%;
-                            right: 15%;
+                            top: 16%;
+                            right: 9%;
                             width: auto;
                         }
                     }
@@ -507,10 +507,11 @@
                         // @extend %d-none;
                         width: 50px;
                         right: 7%;
-                        z-index: +1;
+                        z-index: 1;
+                        bottom: 5%;
 
                         &.banner__shpae-item--animation {
-                            @include animation(rotate 9s cubic-bezier(0.41, 0.15, 0.64, 0.86) infinite alternate);
+                            @include animation(left-right 3s cubic-bezier(0.41, 0.15, 0.64, 0.86) infinite alternate);
                         }
 
                         @include breakpoint(sm) {
@@ -592,6 +593,7 @@
                 }
             }
         }
+
         &--style2 {
             .banner__shape {
                 &-item {
@@ -737,58 +739,6 @@
                         }
                     }
 
-                    // &:nth-child(5) {
-
-                    //     width: 50px;
-                    //     top: 45%;
-                    //     right: 28%;
-                    //     z-index: +1;
-
-                    //     &.banner__shpae-item--animation {
-                    //         @include animation(zoom 2s cubic-bezier(0.41, 0.15, 0.64, 0.86) infinite alternate);
-                    //     }
-
-                    //     // @include breakpoint(lg) {
-                    //     //     width: 150px;
-                    //     // }
-
-                    //     @include breakpoint(xl) {
-                    //         width: 80px;
-                    //     }
-
-                    //     @include breakpoint(xxl) {
-                    //         width: auto;
-                    //     }
-                    // }
-
-                    // &:nth-child(6) {
-                    //     @extend %d-none;
-                    //     width: 50px;
-                    //     top: 41%;
-                    //     right: 18%;
-                    //     z-index: +1;
-                    //     // @include animation(zoom 2s cubic-bezier(0.41, 0.15, 0.64, 0.86) infinite alternate);
-
-                    //     // @include breakpoint(md) {
-                    //     //     display: block;
-                    //     // }
-
-                    //     // @include breakpoint(lg) {
-                    //     //     width: 150px;
-                    //     // }
-                    //     @include breakpoint(xl) {
-                    //         display: block;
-                    //         width: auto;
-                    //         top: 48%;
-                    //         right: 11%;
-                    //     }
-
-                    //     @include breakpoint(xxl) {
-                    //         top: 41%;
-                    //         right: 18%;
-                    //         width: auto
-                    //     }
-                    // }
                 }
             }
         }
@@ -842,13 +792,15 @@
 
                         @include breakpoint(md) {
                             display: block;
+                            right: 30%;
+                            top: 38%;
                         }
 
 
                         @include breakpoint(lg) {
                             display: block;
                             right: 30%;
-                            top: 21%;
+                            top: 25%;
                         }
 
                         @include breakpoint(xl) {
@@ -857,11 +809,11 @@
                             top: 25%;
                         }
 
-                        @include breakpoint(max-xl) {
-                            z-index: -1;
-                            top: 38%;
-                            right: 0;
-                        }
+                        // @include breakpoint(max-xl) {
+                        //     z-index: -1;
+                        //     top: 38%;
+                        //     right: 0;
+                        // }
 
                         @include breakpoint(xxl) {
                             width: 150px;
@@ -872,16 +824,18 @@
                     }
 
                     &:nth-child(3) {
+                        @extend %d-none;
                         width: 100px;
                         z-index: -1;
                         top: 28%;
                         right: 0%;
 
-                        @include breakpoint(lg) {
-                            width: 150px;
-                        }
+                        // @include breakpoint(lg) {
+                        //     width: 150px;
+                        // }
 
                         @include breakpoint(xl) {
+                            display: block;
                             width: auto;
                         }
                     }
@@ -905,14 +859,14 @@
 
                         @include breakpoint(lg) {
                             display: block;
-                            width: 150px;
-                            top: 14%;
-                            left: 22%;
+                            width: 100px;
+                            top: 18%;
+                            left: 20%;
                         }
 
                         @include breakpoint(xl) {
-                            width: auto;
-                            top: 18%;
+                            width: 120px;
+                            top: 19%;
                             left: 17%;
                         }
 
@@ -1046,12 +1000,13 @@
                         span {
                             @extend %p-abs,
                             %pos-center;
-                            font-size: 12px; 
+                            font-size: 12px;
 
-                            &.purecounter{
-                                    margin-inline-start: -3px;
+                            &.purecounter {
+                                margin-inline-start: -3px;
                             }
-                            &.plus{
+
+                            &.plus {
                                 margin-inline-start: 8px;
                             }
                         }
